--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:theme="@android:style/Theme.Material.Light"
+        android:label="@string/app_name"
+        >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="AIzaSyBv4fx9bC_iUrFa-ClBJBJ_Dn07FMqVVrc"/>
