--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.TodoList"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -28,7 +28,7 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/MyMaterialTheme">
+        android:theme="@style/MyMaterialTheme" >
         //android:theme="@android:style/Theme.Material.Light">//
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -39,7 +39,7 @@
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_title">
+            android:label="@string/app_title" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -48,7 +48,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".NormalActivity"
             android:excludeFromRecents="true"
@@ -56,11 +56,15 @@
             android:theme="@style/Theme.Sliding.Light" />
         <activity
             android:name=".SubmitPriceActivity"
-            android:label="@string/title_activity_submit_price"></activity>
+            android:label="@string/title_activity_submit_price" />
         <activity
             android:name=".GeoActivity"
-            android:label="@string/title_activity_geo"></activity>
-
+            android:label="@string/title_activity_geo" />
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/MyMaterialTheme" >
+        </activity>
     </application>
 
 </manifest>
