--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.TodoList"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="11"
@@ -18,30 +18,31 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
-
+        android:label="@string/app_name" >
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBv4fx9bC_iUrFa-ClBJBJ_Dn07FMqVVrc" />
         <meta-data
             android:name="com.google.android.gms.version"
-            tools:replace="android:value"
-            android:value="6111000" />
+            android:value="6111000"
+            tools:replace="android:value" />
 
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_title">
+            android:label="@string/app_title" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,10 +51,11 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
+
         <activity
             android:name=".TaskActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".NormalActivity"
             android:excludeFromRecents="true"
@@ -61,11 +63,12 @@
             android:theme="@style/Theme.Sliding.Light" />
         <activity
             android:name=".SubmitPriceActivity"
-            android:label="@string/title_activity_submit_price"></activity>
+            android:label="@string/title_activity_submit_price" />
         <activity
             android:name=".GeoActivity"
-            android:label="@string/title_activity_geo"></activity>
-
+            android:label="@string/title_activity_geo" />
+        <activity android:name=".TaskDetailActivity" >
+        </activity>
     </application>
 
 </manifest>
